finish menu two. complete v-1

--- a/index.html
+++ b/index.html
@@ -113,7 +113,96 @@
         </div>
     </div>
     <div class="enquery" id="enquery">
-        enquery
+        <button class="button button-close en overlay-enquiry__button-close js-button-close">
+            <span class="button-close__label js-label" style="opacity: 1; visibility: inherit;">close</span>
+            <div class="button-close__icon js-icon">
+                <span class="button-close__icon-line js-icon-line" style="opacity: 1; visibility: inherit;"></span>
+                <span class="button-close__icon-line js-icon-line" style="opacity: 1; visibility: inherit;"></span>
+            </div>
+        </button>
+        <div class="row pt-5 text-light">
+            <div class="col-md-5 p-5">
+                <h2 class="display-6">Contact a Travel Researcher</h2>
+                <a class="overlay-enquiry__button-contact button-contact text-center text-light" href="tel:+1 (332) 334 0501" rel="noopener noreferrer" target="_blank">
+                    <div class="button-contact__content">
+                       <svg class="button-contact__icon button-contact__icon--telephone" width="23" height="24" viewBox="0 0 23 24" xmlns="http://www.w3.org/2000/svg">
+                          <path d="M21.852 17.581l-2.84-1.88a2.614 2.614 0 00-2.745-.083l-2.37 1.11a.788.788 0 01-.763.022c-.128-.066-.267-.135-.413-.207-1.607-.796-4.035-1.998-5.83-5.956a.784.784 0 01.054-.749l1.061-2.126c.495-.793.514-1.79.05-2.602L6.17 1.805a2.6 2.6 0 00-3.4-1.039C.993 1.64.064 3.106.007 5.128c-.01.214-.175 4.27 1.902 8.58 3.499 7.262 10.542 9.316 15.83 9.76.04.004.326.032.737.032 1.064 0 2.96-.185 3.551-1.442l.625-1.065a2.548 2.548 0 00-.8-3.412zm.304 3.121l-.637 1.088c-.546 1.16-2.872 1.192-3.727 1.106-7.471-.628-12.638-3.796-15.355-9.416C.405 9.275.58 5.194.582 5.154v-.007c.05-1.818.849-3.083 2.44-3.865a2.02 2.02 0 012.647.808l1.889 3.305c.358.628.343 1.4-.053 2.037L6.444 9.557c-.237.38-.266.853-.078 1.268 1.88 4.144 4.521 5.452 6.099 6.233.144.071.28.138.405.203.42.216.914.202 1.296-.025l2.37-1.11a2.048 2.048 0 012.159.055l2.84 1.88a1.974 1.974 0 01.62 2.641z" fill="currentColor" fill-rule="nonzero"></path>
+                       </svg>
+                       <h4 class="button-contact__heading">Call us</h4>
+                       <h4 class="button-contact__heading">
+                          <span>+1 (332) 334 0501</span>
+                       </h4>
+                    </div>
+                 </a>
+            </div>
+            <div class="col-md-7 p-5">
+                <h2 class="display-6">Contact us by sending a message</h2>
+                <p>We always aim to reply within 24 hours.</p>
+                <form action="" class="enquery-from">
+                    <div class="row">
+                        <div class="col form-group">
+                            <label for="">Your name</label>
+                            <input type="text" data-placeholder="whats you name?" class="form-control">
+                        </div>
+                        <div class="col form-group">
+                            <label for="">Your name</label>
+                            <input type="text" data-placeholder="whats you name?" class="form-control">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col form-group">
+                            <label for="">Your name</label>
+                            <input type="text" data-placeholder="whats you name?" class="form-control">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col form-group">
+                            <label for="">Your name</label>
+                            <input type="text" data-placeholder="whats you name?" class="form-control">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col form-group">
+                            <label for="">Your name</label>
+                            <input type="text" data-placeholder="whats you name?" class="form-control">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col form-group">
+                            <label for="">Your name</label>
+                            <input type="text" data-placeholder="whats you name?" class="form-control">
+                        </div>
+                        <div class="col form-group">
+                            <label for="">Your name</label>
+                            <input type="text" data-placeholder="whats you name?" class="form-control">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col form-group">
+                            <label for="">Your name</label>
+                            <textarea data-placeholder="whats you name?" class="form-control"></textarea>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col form-group d-flex align-items-center">
+                            <input type="checkbox">&nbsp;&nbsp;
+                            <label for="" class="npa text-light">Subscribe to our inspirational newsletter about luxury travel
+                            </label>
+                        </div>
+                        <div class="col form-group d-flex align-items-center">
+                            <input type="checkbox">&nbsp;&nbsp;
+                            <label for="" class="npa text-light">Subscribe to our inspirational newsletter about luxury travel
+                            </label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col text-center">
+                            <button class="btn btn-light submit">Send message</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
